# pracci

./: README.md  pyproject.toml
.github/workflows/: github-action.yml
pracci/: __init__.py  calculator.py
tests/: test_div.py
